# path-slash

./: .appveyor.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs  test.rs
tests/: lib.rs  windows.rs
