[package]
name = "path-slash"
version = "0.1.4"
authors = ["rhysd <https://rhysd.github.io>"]
edition = "2018"
description = "Conversion to/from a file path from/to slash path"
repository = "https://github.com/rhysd/path-slash"
readme = "README.md"
license = "MIT"
categories = ["filesystem"]

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.release]
dev-version = false

[dependencies]

[dev-dependencies]
lazy_static = "1"
